<resources>
    <string name="app_name">Book Store Inventory</string>
    <string name="book_detail_price_label">Price ($)</string>
    <string name="book_detail_quantity_label">Quantity</string>
    <string name="book_detail_supplier_label">Supplier</string>
    <string name="book_detail_supplier_phone_label">Phone:</string>
    <string name="book_edit_delete_btn">Delete</string>
    <string name="save_action_title">Save</string>
    <string name="edit_action_title">Edit</string>
    <string name="name_required">Name Required</string>
    <string name="price_required">Price Required</string>
    <string name="quantity_required">Quantity Required</string>
    <string name="supplier_required">Supplier Required</string>
    <string name="phone_required">Phone Required</string>
    <string name="data_empty_message">Please fulfill required spaces</string>
    <string name="edit_title">Edit a Book</string>
    <string name="add_title">Add a Book</string>
    <string name="delete_message">Do you want to delete this book?</string>
    <string name="delete_positive_btn">Yes</string>
    <string name="delete_negative_btn">Cancel</string>
    <string name="delete_successful_msg">Book deleted</string>
    <string name="delete_unsuccessful_msg">Deletion failed</string>
    <string name="quantity_less_than_zero_msg">Quantity can not be less than 0</string>
    <string name="quantity_default_value">0</string>
    <string name="discard_edit_message">Do you want to discard changes?</string>
    <string name="empty_view_msg">Click plus button to start adding books.</string>
    <string name="btm_dialog_take_photo">TAKE PHOTO</string>
    <string name="btm_dialog_choose_photo">CHOOSE PHOTO</string>
    <string name="quantity_sold_out_msg">This item is sold out</string>
    <string name="price_label">$</string>
    <string name="quantity_label">Qty:</string>
    <string name="sale_btn_text">SALE</string>
    <string name="book_name_hint">Book Name</string>
    <string name="phone_length_too_long_msg">Phone number can not be longer than 14 digits</string>
    <string name="add_photo_tv">Add Photo</string>
</resources>
