<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_photo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Eat pray love"
        android:id="@+id/book_detail_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_price_label"
        android:text="@string/book_detail_price_label"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_price" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_quantity_label"
        android:text="@string/book_detail_quantity_label"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_quantity" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_supplier_label"
        android:text="@string/book_detail_supplier_label"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_supplier" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_supplier_phone_label"
        android:text="@string/book_detail_supplier_phone_label"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_supplier_phone" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_detail_phone_btn"
        android:src="@drawable/ic_phone_black_24dp"/>

</LinearLayout>